[tool.poetry]
name = "cbuild"
version = "0.1.0"
description = ""
authors = ["nullbyto <nullbyto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cbuild = "cbuild:main"